--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta property="og:URL" content="%PUBLIC_URL%/localImage.jpg" />
+<meta property="og:type" content="article" />   
+<meta property="og:title" content="lorem ipsum lorem ipsum" />
+<meta property="og:description" content="lorem ipsum" />
+<meta property="og:image" content="/thumbnail.png" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
